crates/rolldown/tests/rolldown/errors/export_undefined_variable_with_suggestion/main.js
let foo = 1;
let fooBar = 2;
let fooBaz = 3;

export {
  foo,
  fooBar,
  fooBaz,
  fooo
}
